feat(main): add localized course editions
